--- a/Styles/style.css
+++ b/Styles/style.css
@@ -70,13 +70,61 @@ body{
     padding: 25px;
     margin-top: 203px;
 }
+
+/* Styles of populer digital items with grid  */
 .populers{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+    grid-column-gap: 10px;
+    margin-left: 264px;
+    margin-right: 129px;
+    background-color: #cfc4c4;
+    border-radius: 5px;
+    margin-bottom: 50px;
+    
     
 }
 .populer{
-    
     justify-content: center;
     align-items: center; 
+   
+}
+.populer{
+    border: 1px solid lightgray;
+    background-color:#FFFFFF;
+    margin: 10px;
+    width: 310px;
+    height: 476px;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 5px gray;
+    border-radius: 5px;
+}
+.populer img{
+    width: 300px;
+    height: 256px;
+}
+.populer-title{
+    font-size: 28px;
+    color: #3A3A3A;
+    font-weight: 600;
+    text-align: center;
+    margin-top: 188px;
+    margin-bottom: 30px;
+}
+.rating {
+    color: #FB8200;
+}
+.see-more{
+    text-align: right;
+    margin-right: 129px;
+    justify-content: center;
+    align-items: center;
+    
+}
+.see-more a{
+    text-decoration: none;
+    color: #E02C6D;
 }
