--- a/Styles/style.css
+++ b/Styles/style.css
@@ -31,6 +31,7 @@ body{
 .influener-container{
     display: flex;
     justify-content: center;
+    margin-bottom: 200px;
     
 }
 .influence-title{
@@ -76,11 +77,17 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    border-top: 2px solid whitesmoke;
+    border-bottom: 2px solid whitesmoke;
+   
     
 }
 .logo{
     padding: 25px;
-    margin-top: 203px;
+    justify-content: center;
+    align-items: center;
+
+    
 }
 
 /* Styles of populer digital items with grid  */
@@ -111,7 +118,7 @@ body{
     padding: 10px;
     justify-content: center;
     align-items: center;
-    box-shadow: 5px gray;
+    box-shadow: 2px 2px 2px gray;
     border-radius: 5px;
 }
 .populer img{
@@ -144,12 +151,13 @@ body{
     text-decoration: none;
     color: #E02C6D;
 }
+.customer-feedback-container{
+    margin-top: 80px;
+}
 .feedback-container{
     display: flex;
     justify-content: space-around;
-    align-items: center;
-    background-color: whitesmoke;
-    
+    align-items: center;  
 }
 
 .customer-feedback{
@@ -158,8 +166,8 @@ body{
     width: 220px;
     height: 140px;
     /* margin-right: 40px; */
-    margin-top: 140px;
-    margin-bottom: 140px;
+    margin-top: 100px;
+    margin-bottom: 80px;
     border-radius: 5px;
     background-color: white;
     padding-top: 40px;
@@ -232,6 +240,7 @@ body{
     }
     .customer-feedback-container{
         width: 100%;
+     
     }
     .feedback-container{
         grid-template-columns: repeat(1,1fr);
@@ -246,5 +255,30 @@ body{
     }
     .footer-section{
         width: 100%;
+    }
+}
+/* Tablate version responsive  */
+@media only screen and (min-width:689px) and (max-width:991px) {
+    .menu-bar{
+        
+grid-template-columns: repeat(2,1fr);
+    }
+
+    .influener-container{
+        width: 100%;
+    }
+    .influener-container{
+        grid-template-columns: repeat(2,1fr);
+       align-items: center;
+       
+    }
+    .logos{
+        grid-template-columns: repeat(2,1fr);
+    }
+    .feedback-container{
+        grid-template-columns: repeat(2,1fr);
+    }
+    .seecial-offer-container{
+        grid-template-columns: repeat(2,1fr);
     }
 }
